--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -2,6 +2,8 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: #111;
-  font-family: sans-serif;
+  background-image: url(../../assets/images/bg-intro-mobile.png);
+  background-repeat: no-repeat;
+  background-color: #FF7979;
+  font-family: "Poppins", sans-serif;
 }
