--- a/src/scss/blocks/texts.scss
+++ b/src/scss/blocks/texts.scss
@@ -1,1 +1,15 @@
-
+@use '../mixins/responsive.scss' as *;
+.text{
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 26px;
+    margin: 0;
+}
+.text--bold{
+    font-size: 0.9375rem;
+    font-weight: 700;
+}
+.text--button{
+    font-size: 0.9375rem;
+    font-weight: 400;
+}
