--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -1,9 +1,13 @@
+@use '../mixins/responsive.scss' as *;
 html {
   scroll-behavior: smooth;
 }
 body {
   background-image: url(../../assets/images/bg-intro-mobile.png);
   background-repeat: no-repeat;
-  background-color: #FF7979;
-  font-family: "Poppins", sans-serif;
+  background-color: #ff7979;
+  font-family: 'Poppins', sans-serif;
+  @include responsive(desktop) {
+    background-image: url(../../assets/images/bg-intro-desktop.png);
+  }
 }
