--- a/src/scss/blocks/texts.scss
+++ b/src/scss/blocks/texts.scss
@@ -1,15 +1,31 @@
 @use '../mixins/responsive.scss' as *;
-.text{
-    font-weight: 500;
-    font-size: 1rem;
-    line-height: 26px;
-    margin: 0;
+.text {
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 26px;
+  margin: 0;
 }
-.text--bold{
-    font-size: 0.9375rem;
-    font-weight: 700;
+.text--bold {
+  font-size: 0.9375rem;
+  font-weight: 700;
 }
-.text--button{
-    font-size: 0.9375rem;
-    font-weight: 400;
+.text--cta {
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0.27px;
+  margin: 0;
+}
+.text--small {
+  font-weight: 600;
+  font-size: 0.6875rem;
+  line-height: 21px;
+  color: #bab7d4;
+  margin: 0;
+}
+.text--pink {
+  font-weight: 600;
+  font-size: 0.6875rem;
+  line-height: 21px;
+  color: #ff7979;
 }
