--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,4 +5,5 @@
 @use 'blocks/main.scss';
 @use 'blocks/titles.scss';
 @use 'blocks/texts.scss';
-@use 'blocks/button.scss';
+@use 'blocks/info.scss';
+@use 'blocks/form.scss';
